--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,15 @@ body{
     font-size: 3em;
 }
 
+.hamburgerMenu{
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    font-size: 2em;
+    color: black;
+    z-index: 1000;
+    cursor: pointer;
+}
 /*Hero Section*/
 .heroSection{
     width: 100%;
@@ -76,28 +85,57 @@ body{
 
 /*Slide Show*/
 
-.individualSlide{
-    display: none;
+.individualSlide {
+  position: absolute;
+  inset: 0;
+  display: none;
+
+  justify-content: center;
+  align-items: center;
 }
 
-.slideShowImage{
-    padding: 15px;
-    width: 80%;
-    height: auto;
-    transition: ease-in-out 0.5s ease-in-out;
+.individualSlide.active {
+  display: flex;
 }
 
-.slideShowContainer{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+.slideShowImage {
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+  padding: 0;
 }
 
-.prevBtn,.nextBtn{
-    background: none;
-    border: none;
-    font-size: 2em;
-    cursor: pointer;
+
+.slideShowContainer {
+  position: relative;
+  width: 100%;
+  height: 400px; /* PICK A FIXED HEIGHT */
+  max-width: 800px;
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+
+.prevBtn,
+.nextBtn {
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2em;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.prevBtn {
+  left: 20px;
+}
+
+.nextBtn {
+  right: 20px;
 }
