--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding-left: 30px;
+    margin: 20px ;
     
 }
 
@@ -42,9 +43,7 @@ body{
 
 .menu {
   width: 260px;
-  height: 400px;
-
-  background-color: black;
+  height: 300px;
   margin-right: 15%;
 
   display: flex;
@@ -54,6 +53,10 @@ body{
 
   padding: 30px 20px; /* MUCH smaller */
   gap: 14px;
+
+  border: solid rgb(99, 50, 10) 10px;
+  border-radius: 10px;
+  background-color: rgb(199, 152, 82);
 }
 
 
@@ -61,10 +64,6 @@ body{
   width: 100%;
   height: 350px; /* make the frame taller */
   
-  background-image: url("Images/PinkFrame.png");
-  background-repeat: no-repeat;
-  background-size: contain; /* IMPORTANT */
-  background-position: center;
 
   padding: 20px 0; /* space between frame and text */
   text-align: center;
@@ -75,6 +74,20 @@ body{
   justify-content: center;
 }
 
+h2{
+    font-size: 2em;
+}
+
+h4{
+    font-size: 1.2em;
+}
+
+.toolBox{
+  margin: 5px;
+  border: solid black 2px;
+  border-radius: 10px;
+  padding: 20px;
+}
 
 /*About Section*/
 
@@ -82,6 +95,12 @@ body{
     width: 75px;
     height: auto;
 }
+
+h3{
+  font-size: 1.5em;
+}
+
+/*Tool Box*/
 
 /*Slide Show*/
 
@@ -102,7 +121,7 @@ body{
   max-width: 80%;
   max-height: 80%;
   object-fit: contain;
-  padding: 0;
+  margin-left: 20%;
 }
 
 
