--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,12 @@ body{
     color: black;
     z-index: 1000;
     cursor: pointer;
+    background-color: rgba(0, 153, 255, 0.699);
 }
 
 .menu {
   width: 260px;
-  height: fit-content;
+  height: auto;
   margin-right: 15%;
 
   display: flex;
@@ -64,10 +65,9 @@ body{
 }
 
 a{
+  padding: 10px;
   text-decoration: none;
   font-size: 1.2em;
-  background-color: tomato;
-  padding: 10px;
   border-radius: 5px;
 }
 
@@ -105,9 +105,7 @@ a{
 
 .menuTitle{
   width: 100%;
-  height: 350px; /* make the frame taller */
   
-
   padding: 20px 0; /* space between frame and text */
   text-align: center;
   font-size: 1.5em;
